switch to osx for testing since iceberg fails on linux

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ addons:
 
 # Select operating system(s)
 os:
-  - linux
-#  - osx
+#  - linux
+  - osx
 
 # Select compatible Smalltalk image(s)
 smalltalk:
