--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,22 @@ addons:
 
 # Select operating system(s)
 os:
-#  - linux
-  - osx
+  - linux
+#  - osx
 
 # Select compatible Smalltalk image(s)
 smalltalk:
   - Pharo-6.0
 #  - Pharo-5.0 (disabled because 2 tests fail: ExternalData(Object)>>doesNotUnderstand: #readStringUTF8. Pb coming from Iceberg)
+
+smalltalk_edge:
+  source: estebanlm/smalltalkCI
+  branch: dev
+
+env:
+  global:
+  - PHARO_VM=stable
+  - LINUX_HEARTBEAT=threaded
 
 # configuration
 before_script:
