--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,13 @@ os:
 # Select compatible Smalltalk image(s)
 smalltalk:
   - Pharo-7.0
-
+  
+matrix:
+  include:
+    - smalltalk_config: .client.ston
+  allow_failures: # Allow bleeding edge builds to fail
+    - smalltalk_config: .server.ston
+    - smalltalk_config: .failingTests.ston
 # configuration
 before_script:
   - git config --global user.name 'Travis CI'
