Fixing the matriz

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ smalltalk:
   - Pharo-7.0
   
 matrix:
+  include: 
+    - smalltalk_config: .smalltalk.ston
+    - smalltalk_config: .server.ston
+    - smalltalk_config: .failingTests.ston
   allow_failures: # Allow bleeding edge builds to fail
     - smalltalk_config: .server.ston
     - smalltalk_config: .failingTests.ston
