disable build on os x because of random SSL errors with  iceberg

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ sudo: false
 # Select operating system(s)
 os:
   - linux
-  - osx
+# random SSL error with iceberg  - osx
 
 # Select compatible Smalltalk image(s)
 smalltalk:
