--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Pakbot-client
+name: Pakbot-core
 
 # Controls when the workflow will run
 on:
@@ -21,11 +21,11 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         smalltalk: [ Pharo64-11 ]
-        smalltalk_config: [ .client.ston ]
+        smalltalk_config: [ .core.ston ]
         
     # The type of runner that the job will run on
     runs-on: ${{ matrix.os }}
-    name: Pakbot client, ${{ matrix.smalltalk }} on ${{ matrix.os }}
+    name: Pakbot core, ${{ matrix.smalltalk }} on ${{ matrix.os }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
